--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,11 +6,17 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
          <uses-permission android:name="android.permission.INTERNET" />
+          <uses-permission
+          android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+          <uses-permission
+          android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="flutter_demos"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"  android:value="AIzaSyCJLo3arAZMY3OXC7oFWIDuPE6ZkI10V_E"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -38,6 +44,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+              <action android:name="FLUTTER_NOTIFICATION_CLICK" />
+              <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
