--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
 
+
+org.gradle.jvmargs=-Xmx1536M
+android.enableR8=true
+android.useAndroidX=true
+android.enableJetifier=true
