--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+<string>YES</string>	
+	<key>NSCameraUsageDescription</key>	
+   <string>Explanation on why the camera access is needed.</string>
+
 </dict>
 </plist>
