--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,21 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.12+4
   provider: ^4.3.3
   http: ^0.12.2
+  google_maps_flutter: ^1.2.0
+  location: ^3.2.4
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
+  camera:
+  path_provider:
+  video_player: ^0.10.11+2
+  path:
+  firebase_auth: "^0.20.1"
+  cloud_firestore: "^0.16.0+1"
+  firebase_messaging: "^5.0.2"
+  fluttertoast: ^7.1.8
   flutter:
     sdk: flutter
 
